--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -15,3 +15,9 @@
     display: flex;
     max-width: 150px
 }
+
+@media only screen and (max-width: 500px){
+    .banner img{
+        display: none;
+    }
+}
